added master clean data and processing notebook

--- a/melissa_function_test.ipynb
+++ b/melissa_function_test.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/h7/fr7g30_x5x12d68ww_s6w2_m0000gn/T/ipykernel_13041/1736896732.py:10: DeprecationWarning: \n",
+      "/var/folders/h7/fr7g30_x5x12d68ww_s6w2_m0000gn/T/ipykernel_27536/1736896732.py:10: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +86,19 @@
     "\n",
     "# Adding additional feature for imputation later\n",
     "train_df[\"model_make\"] = train_df.model + \"_\" + train_df.make"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = pd.read_csv(r\"./dataset/test.csv\")\n",
+    "test_df['model'] = test_df['model'].apply(lambda x:x.replace('(', ''))\n",
+    "test_df['reg_date_dt'] = test_df['reg_date'].apply(lambda x: datetime.strptime(x, \"%d-%b-%Y\"))\n",
+    "test_df['reg_date_year'] = test_df['reg_date_dt'].apply(lambda x:x.year)\n",
+    "test_df['reg_date_month'] = test_df['reg_date_dt'].apply(lambda x:x.month)\n"
    ]
   },
   {
@@ -174,264 +187,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_idx = 23774"
+    "start_idx = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "25000"
+       "10000"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df.iloc[start_idx:,:].shape[0] + start_idx"
+    "test_df.iloc[start_idx:,:].shape[0] + start_idx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  2%|▏         | 26/1226 [01:30<1:16:16,  3.81s/it]"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'SANITY CHECK ON number of scrapped keys 27'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 10%|█         | 126/1226 [06:32<47:55,  2.61s/it]  "
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'SANITY CHECK ON number of scrapped keys 27'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 18%|█▊        | 226/1226 [11:33<43:37,  2.62s/it]  "
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'SANITY CHECK ON number of scrapped keys 27'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 27%|██▋       | 326/1226 [16:45<57:52,  3.86s/it]  "
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'SANITY CHECK ON number of scrapped keys 27'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 35%|███▍      | 426/1226 [21:30<37:32,  2.82s/it]"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'SANITY CHECK ON number of scrapped keys 27'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 43%|████▎     | 526/1226 [26:27<43:19,  3.71s/it]"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'SANITY CHECK ON number of scrapped keys 27'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 46%|████▌     | 558/1226 [27:47<18:47,  1.69s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error while processing row 24331: 503 Server Error: Service Unavailable for url: https://www.sgcarmart.com/used_cars/info.php?ID=1328434\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 51%|█████     | 626/1226 [31:20<36:02,  3.60s/it]"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'SANITY CHECK ON number of scrapped keys 27'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 59%|█████▉    | 726/1226 [36:16<32:27,  3.90s/it]"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'SANITY CHECK ON number of scrapped keys 27'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 67%|██████▋   | 826/1226 [40:56<18:37,  2.79s/it]"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'SANITY CHECK ON number of scrapped keys 27'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 76%|███████▌  | 926/1226 [45:45<10:31,  2.11s/it]"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'SANITY CHECK ON number of scrapped keys 27'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 84%|████████▎ | 1026/1226 [50:41<08:50,  2.65s/it]"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'SANITY CHECK ON number of scrapped keys 27'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 92%|█████████▏| 1126/1226 [55:32<04:27,  2.67s/it]"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'SANITY CHECK ON number of scrapped keys 27'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1226/1226 [1:00:32<00:00,  2.96s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "## Imputing for multiple rows\n",
-    "default_specs = {'Engine & Transmission': \"unknown\", 'Engine Capacity': \"unknown\",\n",
-    "'Engine Type': \"unknown\", 'Fuel Type': \"unknown\", 'Drive Type': \"unknown\", 'Transmission': \"unknown\", \n",
-    "'Performance': \"unknown\", 'Power': \"unknown\", 'Torque': \"unknown\", 'Acceleration': \"unknown\", 'Top Speed': \"unknown\", \n",
-    "'Fuel Consumption': \"unknown\", 'CO2 Emission (LTA)': \"unknown\", 'Measurements': \"unknown\", \n",
-    "'Vehicle Type': \"unknown\", 'Seating Capacity': \"unknown\", 'Dimensions (L x W x H)': \"unknown\", \n",
-    "'Wheelbase': \"unknown\", 'Min Turning Radius': \"unknown\", 'Kerb Weight': \"unknown\", 'Fuel Tank Capacity': \"unknown\",\n",
-    " 'Boot/Cargo Capacity': \"unknown\", 'Suspension (Front)': \"unknown\", 'Suspension (Rear)': \"unknown\", \n",
-    " 'Brakes (Front)': \"unknown\", 'Brakes (Rear)': \"unknown\", 'Rim Size': \"unknown\"}\n",
-    "\n",
-    "all_specs_list = []\n",
+    "## train errors\n",
     "error_rows = [5832,\n",
     " 6918,\n",
     " 8938,\n",
@@ -447,16 +236,61 @@
     " 11667,\n",
     " 13839,\n",
     " 17559,\n",
-    " 20107]\n",
-    "for i, row in tqdm(train_df.iloc[start_idx:,:].iterrows(), total=len(train_df.iloc[start_idx:,:])):\n",
+    " 20107,\n",
+    " 24331]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/10000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'SANITY CHECK ON number of scrapped keys 27'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 1/10000 [00:01<4:32:09,  1.63s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "## Imputing for multiple rows\n",
+    "default_specs = {'Engine & Transmission': \"unknown\", 'Engine Capacity': \"unknown\",\n",
+    "'Engine Type': \"unknown\", 'Fuel Type': \"unknown\", 'Drive Type': \"unknown\", 'Transmission': \"unknown\", \n",
+    "'Performance': \"unknown\", 'Power': \"unknown\", 'Torque': \"unknown\", 'Acceleration': \"unknown\", 'Top Speed': \"unknown\", \n",
+    "'Fuel Consumption': \"unknown\", 'CO2 Emission (LTA)': \"unknown\", 'Measurements': \"unknown\", \n",
+    "'Vehicle Type': \"unknown\", 'Seating Capacity': \"unknown\", 'Dimensions (L x W x H)': \"unknown\", \n",
+    "'Wheelbase': \"unknown\", 'Min Turning Radius': \"unknown\", 'Kerb Weight': \"unknown\", 'Fuel Tank Capacity': \"unknown\",\n",
+    " 'Boot/Cargo Capacity': \"unknown\", 'Suspension (Front)': \"unknown\", 'Suspension (Rear)': \"unknown\", \n",
+    " 'Brakes (Front)': \"unknown\", 'Brakes (Rear)': \"unknown\", 'Rim Size': \"unknown\"}\n",
+    "\n",
+    "all_specs_list = []\n",
+    "error_rows = []\n",
+    "for i, row in tqdm(test_df.iloc[start_idx:,:].iterrows(), total=len(test_df.iloc[start_idx:,:])):\n",
     "    # Add a delay of 1 second between requests\n",
     "    # To join the impute set and non impute\n",
     "    time.sleep(1)\n",
     "    try:\n",
-    "        final_dict = {\"listing_id\" : train_df.listing_id.iloc[i]}\n",
-    "        car_code_id = get_car_code_url(train_df.listing_id.iloc[i])\n",
+    "        final_dict = {\"listing_id\" : test_df.listing_id.iloc[i]}\n",
+    "        car_code_id = get_car_code_url(test_df.listing_id.iloc[i])\n",
     "        subcode_dict = get_subcode_dict(car_code_id)\n",
-    "        best_match_name, spec_link = get_best_spec_link(train_df.title.iloc[i], subcode_dict)\n",
+    "        best_match_name, spec_link = get_best_spec_link(test_df.title.iloc[i], subcode_dict)\n",
     "        if spec_link:\n",
     "            specs = get_generic_specification_from_link(spec_link) \n",
     "        else: \n",
