--- a/sanity_check.ipynb
+++ b/sanity_check.ipynb
@@ -2,16 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "id": "8c44143c-834f-49b2-a126-acffa14efa06",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "/var/folders/h7/fr7g30_x5x12d68ww_s6w2_m0000gn/T/ipykernel_27802/3363807085.py:6: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
      ]
     }
    ],
@@ -42,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0b31d26f",
    "metadata": {},
    "outputs": [],
@@ -1883,7 +1889,7 @@
    "id": "279c1690",
    "metadata": {},
    "source": [
-    "### Processing scraped items "
+    "## Processing scraped items "
    ]
   },
   {
@@ -1895,7 +1901,7 @@
     {
      "data": {
       "text/plain": [
-       "9441"
+       "24989"
       ]
      },
      "metadata": {},
@@ -1922,13 +1928,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
+   "id": "14cc7d19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proc_scraped_new_car_info = scraped_new_car_info.copy()\n",
+    "proc_scraped_new_car_info[\"Fuel Type\"] = proc_scraped_new_car_info[\"Fuel Type\"].str.replace(r'Diesel \\(Euro [IVX]+\\)', 'Diesel', regex=True)\n",
+    "proc_scraped_new_car_info[\"Fuel Type\"] = proc_scraped_new_car_info[\"Fuel Type\"].str.lower()\n",
+    "# ENGINE REGEX \n",
+    "variable = \"Engine Capacity\"\n",
+    "engine_regex = r\"\\D\"\n",
+    "proc_scraped_new_car_info = extrac_float_val(\n",
+    "    df=proc_scraped_new_car_info, variable=variable, regex_pattern=engine_regex)\n",
+    "\n",
+    "# POWER\n",
+    "variable = \"Power\"\n",
+    "power_regex = r'\\d+\\.?\\d*'\n",
+    "proc_scraped_new_car_info = extrac_float_val(df=proc_scraped_new_car_info, variable=variable, regex_pattern=power_regex)\n",
+    "\n",
+    "# CURB WEIGHT REGEX \n",
+    "variable = \"Kerb Weight\"\n",
+    "curb_regex = r\"\\D\"\n",
+    "proc_scraped_new_car_info = extrac_float_val(df=proc_scraped_new_car_info, variable=variable, regex_pattern=curb_regex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3210e0fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proc_scraped_new_car_info.to_pickle(\"proc_scraped_new_car_info.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "764091be",
    "metadata": {},
    "outputs": [],
    "source": [
     "def extrac_float_val(df:pd.DataFrame,variable:str, regex_pattern):\n",
-    "    proc = sanity_check_df[sanity_check_df[variable] != \"unknown\"].dropna(subset=[variable])\n",
+    "    proc = df[df[variable] != \"unknown\"].dropna(subset=[variable])\n",
     "    if variable == \"Power\":\n",
     "        proc[variable] = proc[variable].apply(lambda x: float(re.search(regex_pattern, x).group()))\n",
     "    else:\n",
@@ -1948,7 +1991,7 @@
     "\n",
     "def knn_impute(feature:list, df:pd.DataFrame, neighbours:int, imputed_feature:str):\n",
     "    \n",
-    "    impute_df = df[features]\n",
+    "    impute_df = df[feature]\n",
     "    # Initialize KNNImputer\n",
     "    imputer = KNNImputer(n_neighbors=5)\n",
     "    # Perform imputation\n",
@@ -1964,10 +2007,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "e31277d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'orig_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m sanity_check_df \u001b[38;5;241m=\u001b[39m \u001b[43morig_df\u001b[49m\u001b[38;5;241m.\u001b[39mmerge(scraped_new_car_info, on \u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlisting_id\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'orig_df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "sanity_check_df = orig_df.merge(scraped_new_car_info, on =\"listing_id\")"
    ]
@@ -2053,7 +2108,7 @@
    "source": [
     "ref_variable = \"curb_weight\"\n",
     "variable = \"Kerb Weight\"\n",
-    "# ENGINE REGEX \n",
+    "# CURB WEIGHT REGEX \n",
     "curb_regex = r\"\\D\"\n",
     "test_df = extrac_float_val(df=sanity_check_df, variable=variable, regex_pattern=curb_regex)\n",
     "\n",
