modified training code

--- a/melissa_function_test.ipynb
+++ b/melissa_function_test.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -187,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_idx = 0"
+    "start_idx = 8897"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "10000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,14 +242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/10000 [00:00<?, ?it/s]"
+      "  0%|          | 3/1103 [00:09<57:39,  3.14s/it]  "
      ]
     },
     {
@@ -265,7 +265,181 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 1/10000 [00:01<4:32:09,  1.63s/it]"
+      "  9%|▉         | 103/1103 [04:41<37:58,  2.28s/it] "
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'SANITY CHECK ON number of scrapped keys 27'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 18%|█▊        | 203/1103 [09:22<37:17,  2.49s/it]  "
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'SANITY CHECK ON number of scrapped keys 27'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 27%|██▋       | 303/1103 [14:05<31:06,  2.33s/it]"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'SANITY CHECK ON number of scrapped keys 27'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 37%|███▋      | 403/1103 [18:30<35:28,  3.04s/it]"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'SANITY CHECK ON number of scrapped keys 27'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 46%|████▌     | 503/1103 [23:04<29:44,  2.97s/it]"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'SANITY CHECK ON number of scrapped keys 27'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 49%|████▉     | 540/1103 [24:32<25:58,  2.77s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error while processing row 9436: 503 Server Error: Service Unavailable for url: https://www.sgcarmart.com/used_cars/info.php?ID=1305430\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 55%|█████▍    | 603/1103 [27:34<23:41,  2.84s/it]"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'SANITY CHECK ON number of scrapped keys 27'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 64%|██████▎   | 703/1103 [32:16<16:06,  2.42s/it]"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'SANITY CHECK ON number of scrapped keys 27'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 73%|███████▎  | 803/1103 [36:44<14:06,  2.82s/it]"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'SANITY CHECK ON number of scrapped keys 27'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 82%|████████▏ | 903/1103 [40:58<08:33,  2.57s/it]"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'SANITY CHECK ON number of scrapped keys 27'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 91%|█████████ | 1003/1103 [45:25<05:27,  3.28s/it]"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'SANITY CHECK ON number of scrapped keys 27'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1103/1103 [49:55<00:00,  2.72s/it]\n"
      ]
     }
    ],
@@ -306,32 +480,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[5832,\n",
-       " 6918,\n",
-       " 8938,\n",
-       " 8974,\n",
-       " 8975,\n",
-       " 8976,\n",
-       " 8977,\n",
-       " 8978,\n",
-       " 8979,\n",
-       " 8980,\n",
-       " 9666,\n",
-       " 11626,\n",
-       " 11667,\n",
-       " 13839,\n",
-       " 17559,\n",
-       " 20107,\n",
-       " 24331]"
+       "[]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,13 +500,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'end_idx 24999'"
+       "'end_idx 9999'"
       ]
      },
      "metadata": {},
@@ -362,11 +520,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = f\"./dataset/all_specs_list_{start_idx}_{end_idx}.pkl\"\n",
+    "filename = f\"./dataset/test_all_specs_list_{start_idx}_{end_idx}.pkl\"\n",
     "pickle.dump(all_specs_list, open(filename,\"wb\"))"
    ]
   },
