--- a/sanity_check.ipynb
+++ b/sanity_check.ipynb
@@ -1894,14 +1894,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "a0be5c1a",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_all_specs_list_0_8897.pkl\n",
+      "test_all_specs_list_8897_9999.pkl\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "24989"
+       "9999"
       ]
      },
      "metadata": {},
@@ -1913,7 +1921,8 @@
     "\n",
     "folder_path = \"/Users/melloo21/Desktop/NUS Items/CS5228/Project/CS5228_project/dataset\"\n",
     "for file_name in os.listdir(folder_path):\n",
-    "    if file_name.endswith(\".pkl\"):\n",
+    "    if file_name.endswith(\".pkl\") & (file_name.startswith(\"test\")):\n",
+    "        print(file_name)\n",
     "        file_path = os.path.join(folder_path, file_name)\n",
     "\n",
     "        with open(file_path, 'rb') as file:\n",
@@ -1928,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "14cc7d19",
    "metadata": {},
    "outputs": [],
@@ -1955,12 +1964,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "3210e0fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "proc_scraped_new_car_info.to_pickle(\"proc_scraped_new_car_info.pkl\")"
+    "proc_scraped_new_car_info.to_pickle(\"test_proc_scraped_new_car_info.pkl\")"
    ]
   },
   {
