adding generic transformation script adapted from Bhushan

--- a/EDA_2.ipynb
+++ b/EDA_2.ipynb
@@ -16271,6 +16271,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "317e075c-6c10-4da0-99d5-63cb0d25025c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'original': 0         5.0\n",
+       " 1        15.0\n",
+       " 2         6.0\n",
+       " 3         6.0\n",
+       " 4         9.0\n",
+       "          ... \n",
+       " 19995     9.0\n",
+       " 19996     8.0\n",
+       " 19997     5.0\n",
+       " 19998     8.0\n",
+       " 19999    16.0\n",
+       " Name: car_age, Length: 20000, dtype: float64,\n",
+       " 'Log': None,\n",
+       " 'Square Root': array([2.23606798, 3.87298335, 2.44948974, ..., 2.23606798, 2.82842712,\n",
+       "        4.        ]),\n",
+       " 'Box-Cox': None,\n",
+       " 'Yeo-Johnson': array([-0.55699136,  1.2697622 , -0.28996331, ..., -0.55699136,\n",
+       "         0.16089495,  1.39313959])}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ft.transformations"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "09f00e8c-baeb-4796-9f6c-0e84dacf6562",
    "metadata": {
